--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-, "app/dashboard/interview/[interviewId]/feedback/page.jsx"  ],
+, "app/dashboard/interview/[interviewId]/feedback/page.jsx", "components/ui/badge.jsx", "components/ui/progress.jsx"  ],
   "exclude": [
     "node_modules"
   ]
